subprocess: only call g_subprocess_get_* APIs if not cancelled

Since we made our IdeSubprocess wrappers force exit processes when their
cancellable is triggered, we don't want to call these APIs unless we know
the process has exited.

We can check for this by seeing if the error is a cancelled error. It only
affects tracing builds anyway.

https://bugzilla.gnome.org/show_bug.cgi?id=778918